# pocc

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  demo-dgemm.sh  demo-gemver.sh  dgemm.c  gemver.c  install.sh
config/: configure.cfg  driver.cfg  installer-svn.sh  pocc-install.cfg  repositories.cfg
config/base/: configure.cfg  driver.cfg
config/cdsc/: configure.cfg  driver.cfg
config/devel/: configure.cfg  driver.cfg
config/hls/: configure.cfg  driver.cfg
config/irregular/: configure.cfg  driver.cfg
config/local/: configure.cfg  driver.cfg
config/osl/: configure.cfg  driver.cfg
config/release/: configure.cfg  driver.cfg
config/stable/: configure.cfg  driver.cfg
doc/: Makefile.am  doxygen.cfg  mainpage.dox  pocc.texi  versions.txt
driver/autoconf/: pocc.m4
driver/pocc/: Makefile.am  driver-candl.c  driver-clan.c  driver-clastops.c  driver-cloog.c  driver-codegen.c  driver-hlsir.cc  driver-letsee.c  driver-pastops.c  driver-pluto.c  driver-polyfeat.c  driver-ponos.c  driver-ptile.c  error.c  exec.c  options.c  xmalloc.c
driver/pocc-utils/: Makefile.am  options.c
driver/pocc-utils/include/pocc-utils/: options.h  types.h
driver/pocc/include/pocc/: common.h  driver-candl.h  driver-clan.h  driver-clastops.h  driver-cloog.h  driver-codegen.h  driver-hlsir.h  driver-letsee.h  driver-pastops.h  driver-pluto.h  driver-polyfeat.h  driver-ptile.h  dummy_defines.h  error.h  exec.h  options.h
driver/src/: Makefile.am  getopts.c  getopts.h  options.c  options.h  pocc.c
generators/scripts/: compile  execute  inscop  inscop-fakearray  omp  plann  ploog  timeout  timercode  trash  vloog
generators/scripts/annotations/tool/: lex.py  yacc.py
pocc/driver/: Makefile.am  getopts.h  options.c  options.h  pocc.c
pocc/driver/install-pocc/lib/: libpocc-utils.0.0.0.dylib  libpocc-utils.0.dylib
pocc/driver/pocc/: Makefile.am  driver-candl.c  driver-clan.c  driver-cloog.c  driver-codegen.c  driver-letsee.c  driver-pluto.c  error.c  options.c
pocc/driver/pocc-utils/: options.c
pocc/driver/pocc-utils/include/pocc-utils/: options.h  types.h
pocc/driver/pocc/include/pocc/: driver-candl.h  driver-clan.h  driver-cloog.h  driver-codegen.h  driver-letsee.h  driver-pluto.h  error.h  options.h
pocc/driver/src/: Makefile.am  common.h  config.h  getopts.c  getopts.h  options.c  options.h  pocc.c  xmalloc.c  xstrdup.c  xstrerror.c
tests/: Makefile.am
tests/benchmarks/dgemm/: dgemm.c
tests/benchmarks/gemver/: gemver.c
tests/scripts/: checker.sh  checker_correctness.sh  checker_perfcorrect.sh  compute_regressions.sh  conflist-large.txt  conflist-passthru.txt  conflist-small.txt  data_to_csv.sh
tests/tests/dgemm/: dgemm.passthru.c  dgemm.plutotile.c  dgemm.plutotilemf.c  dgemm.plutotilepar.c  dgemm.plutotileparmf.c  dgemm.plutotileparunroll.c  dgemm.plutotileparunrollprev.c
tests/tests/gemver/: gemver.passthru.c  gemver.plutotile.c  gemver.plutotilemf.c  gemver.plutotilepar.c  gemver.plutotileparmf.c  gemver.plutotileparunroll.c  gemver.plutotileparunrollprev.c
